--- a/src/main/webapp/paginas/admin/selecao_de_livros.xhtml
+++ b/src/main/webapp/paginas/admin/selecao_de_livros.xhtml
@@ -3,34 +3,34 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:f="http://java.sun.com/jsf/core" id="modalLivroId" 
-	widgetVar="dialogLivro" modal="false" resizable="false" header="Selecione os livros" closable="true">
+	xmlns:f="http://java.sun.com/jsf/core" id="modalLivroId"
+	widgetVar="dialogLivro" modal="false" resizable="false"
+	header="Selecione os livros" closable="true">
 
 	<div style="height: 400px; width: 550px; overflow: auto;">
-            <p:dataTable selection="#{emprestimoMb.emprestimo.livro}"
+		<p:dataTable selection="#{emprestimoMb.emprestimo.livro}"
 			rowKey="#{livro.id}" id="tabelaModalDeLivros" var="livro"
-                        value="#{livroMb.lista}"
+			value="#{livroMb.lista}"
 			emptyMessage="Não existem livros cadastrados"
 			style="padding-top:20px;">
 
 			<f:facet name="header" />
-			<p:column selectionMode="single"
-				style="width:16px;text-align:center" />
+			<p:column selectionMode="single" style="width:16px;text-align:center" />
 
 			<p:column headerText="Id">
 				<h:outputText value="#{livro.id}" />
 			</p:column>
 			<p:column headerText="Título">
-                <h:outputText value="#{livro.titulo}" />
+				<h:outputText value="#{livro.titulo}" />
 			</p:column>
 			<p:column headerText="Autor">
 				<h:outputText value="#{livro.autor}" />
 			</p:column>
 			<p:column headerText="Emprestada">
-                            <h:outputText value="#{livro.emprestadoString}" />
+				<h:outputText value="#{livro.emprestadoString}" />
 			</p:column>
 			<p:column headerText="Aquisição">
-                            <h:outputText value="#{livro.aquisicaoString}" />
+				<h:outputText value="#{livro.aquisicaoString}" />
 			</p:column>
 
 			<f:facet name="footer">
